// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return a faq item with additionnal content from its source and slug 1`] = `
Object {
  "_id": "6",
  "_index": "cdtn_document_test",
  "_score": 1.9169226,
  "_source": Object {
    "author": "DIRECCTE",
    "date": "01/12/2017",
    "html": "<p>Le préavis de démission diffère suivant la qualification. Il est de :</p><ul>
<li>8 jours pour les employés ayant moins de 6 mois d’ancienneté, de 15 jours pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et d’1 mois pour ceux ayant 2 ans d’ancienneté et plus,</li>
<li>15 jours pour les agents de maîtrise ayant moins de 6 mois d’ancienneté, d’1 mois pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et de 2 mois pour ceux ayant 2 ans d’ancienneté et plus.</li>
<li>1 mois pour les cadres ayant moins de 6 mois d’ancienneté, et 3 mois pour ceux ayant 6 mois d’ancienneté et plus.</li>
</ul><p>(Article 30.1 de la convention collective nationale des hôtels, cafés, restaurants, que vous pouvez consulter sur le site <a href=\\"https://legifrance.gouv.fr\\">https://legifrance.gouv.fr</a> avec son numéro d’identification (IDCC) 1979).</p>",
    "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
    "tags": Array [
      "themes:2000",
      "theme:rupture du contrat",
      "theme:démission",
      "theme:préavis",
      "branche:hôtels, cafés et restaurants",
    ],
    "title": "Dans les HCR, quel est le préavis de démission ?",
  },
  "_type": "cdtn_document_test",
  "relatedItems": Object {
    "faq": Array [
      Object {
        "_id": "7",
        "_index": "cdtn_document_test",
        "_score": 1.2809339,
        "_source": Object {
          "slug": "joccupe-un-poste-de-vendeuse-en-boulangerie-patisserie-et-je-viens-de-poser-ma-demission-quelles-sont-les-consequences-dun-arret-maladie-pendant-la-periode-de-preavis-est-ce-que-je-peux-etre-sanctionnee-en-cas-darret-de-travail",
          "source": "faq",
          "title": "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma démission. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ? Est-ce que je peux être sanctionnée en cas d’arrêt de travail ?",
        },
        "_type": "cdtn_document_test",
      },
    ],
  },
}
`;

exports[`return item from its id 1`] = `
Object {
  "_id": "6",
  "_index": "cdtn_document_test",
  "_source": Object {
    "all_text": "Dans les HCR, quel est le préavis de démission ? Le préavis de démission diffère suivant la qualification. Il est de :
8 jours pour les employés ayant moins de 6 mois d’ancienneté, de 15 jours pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et d’1 mois pour ceux ayant 2 ans d’ancienneté et plus,
15 jours pour les agents de maîtrise ayant moins de 6 mois d’ancienneté, d’1 mois pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et de 2 mois pour ceux ayant 2 ans d’ancienneté et plus.
1 mois pour les cadres ayant moins de 6 mois d’ancienneté, et 3 mois pour ceux ayant 6 mois d’ancienneté et plus.
(Article 30.1 de la convention collective nationale des hôtels, cafés, restaurants, que vous pouvez consulter sur le site https://legifrance.gouv.fr avec son numéro d’identification (IDCC) 1979). ['rupture du contrat', 'démission', 'préavis'] hôtels, cafés et restaurants",
    "author": "DIRECCTE",
    "date": "01/12/2017",
    "html": "<p>Le préavis de démission diffère suivant la qualification. Il est de :</p><ul>
<li>8 jours pour les employés ayant moins de 6 mois d’ancienneté, de 15 jours pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et d’1 mois pour ceux ayant 2 ans d’ancienneté et plus,</li>
<li>15 jours pour les agents de maîtrise ayant moins de 6 mois d’ancienneté, d’1 mois pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et de 2 mois pour ceux ayant 2 ans d’ancienneté et plus.</li>
<li>1 mois pour les cadres ayant moins de 6 mois d’ancienneté, et 3 mois pour ceux ayant 6 mois d’ancienneté et plus.</li>
</ul><p>(Article 30.1 de la convention collective nationale des hôtels, cafés, restaurants, que vous pouvez consulter sur le site <a href=\\"https://legifrance.gouv.fr\\">https://legifrance.gouv.fr</a> avec son numéro d’identification (IDCC) 1979).</p>",
    "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
    "source": "faq",
    "tags": Array [
      "themes:2000",
      "theme:rupture du contrat",
      "theme:démission",
      "theme:préavis",
      "branche:hôtels, cafés et restaurants",
    ],
    "text": "Le préavis de démission diffère suivant la qualification. Il est de :
8 jours pour les employés ayant moins de 6 mois d’ancienneté, de 15 jours pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et d’1 mois pour ceux ayant 2 ans d’ancienneté et plus,
15 jours pour les agents de maîtrise ayant moins de 6 mois d’ancienneté, d’1 mois pour ceux ayant entre 6 mois et moins de 2 ans d’ancienneté, et de 2 mois pour ceux ayant 2 ans d’ancienneté et plus.
1 mois pour les cadres ayant moins de 6 mois d’ancienneté, et 3 mois pour ceux ayant 6 mois d’ancienneté et plus.
(Article 30.1 de la convention collective nationale des hôtels, cafés, restaurants, que vous pouvez consulter sur le site https://legifrance.gouv.fr avec son numéro d’identification (IDCC) 1979).",
    "title": "Dans les HCR, quel est le préavis de démission ?",
  },
  "_type": "cdtn_document_test",
  "_version": 1,
  "found": true,
}
`;

exports[`return item from source and slug  1`] = `
Object {
  "_id": "2",
  "_index": "cdtn_document_test",
  "_score": 1.9169226,
  "_source": Object {
    "date": "28/11/2018",
    "html": "<p>La démission permet au salarié de rompre son contrat de travail à durée indéterminée de sa propre initiative, à condition de manifester clairement sa volonté de démissionner et de respecter le délai de préavis éventuellement prévu, sauf dispense accordée par l’employeur ou prévue par la convention collective (celle-ci peut, par exemple, prévoir que le salarié est libéré de son préavis lorsqu’il a trouvé un autre emploi).<br class=\\"manualbr\\">Des facilités de recherche d’emploi peuvent être prévues par la convention collective.</p> <p>Le Code du travail ne prévoit aucune forme particulière pour présenter sa démission&nbsp;: elle peut être verbale, écrite ou résulter d’un comportement sans ambiguïté du salarié (ce qui n’est pas le cas, par exemple, de la seule absence du salarié à son poste de travail ou de l’absence de reprise du travail à l’issue des congés payés).</p><p>Toutefois, pour éviter les contestations sur l’intention même de démissionner ou sur la date de la fin du contrat de travail, le salarié a intérêt à remettre sa démission par écrit (si possible par lettre recommandée avec avis de réception). L’écrit permet également de définir le début du préavis.</p><p>Certaines conventions collectives prévoient d’ailleurs que la démission doit être écrite et adressée par lettre recommandée avec avis  de réception. La démission ne peut être exigée par avance, par exemple, lors de la signature du contrat de travail ou au cours de son exécution.</p>",
    "slug": "la-demission-comment-presenter-une-demission",
    "title": "La démission : comment présenter une démission ?",
    "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
  },
  "_type": "cdtn_document_test",
  "relatedItems": Object {},
}
`;
